--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">orangehrm</a></td><td class="num">3</td><td class="num">0</td><td class="num attn">2</td><td class="num attn">1</td><td class="num">122,888</td><td></td><td></td></tr>
+<tr><td><a href="#t0">orangehrm</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">6</td><td class="num attn">3</td><td class="num">326,503</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">orangehrm &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.orangehrm.test.Login</td><td><a href="#m0">inValidLoginTest</a></td><td rowspan="1">1771227553309</td><td rowspan="1">11034</td></tr><tr><th colspan="4">orangehrm &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="2">com.orangehrm.test.Login</td><td><a href="#m1">inValidLoginTest</a></td><td rowspan="2">1771227509504</td><td rowspan="2">5276</td></tr><tr class="retriedeven"><td><a href="#m2">inValidLoginTest</a></td></tr><tr><th colspan="4">orangehrm &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.orangehrm.test.ApiTest</td><td><a href="#m3">verifyGetUserAPI</a></td><td rowspan="1">1771227479333</td><td rowspan="1">2479</td></tr><tr class="passedodd"><td rowspan="2">com.orangehrm.test.Login</td><td><a href="#m4">getTitle</a></td><td rowspan="1">1771227490765</td><td rowspan="1">4706</td></tr><tr class="passedodd"><td><a href="#m5">verifyValidLoginTest</a></td><td rowspan="1">1771227574861</td><td rowspan="1">26664</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">orangehrm &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">com.orangehrm.test.Login</td><td><a href="#m0">getTitle</a></td><td rowspan="1">1771238699077</td><td rowspan="1">32567</td></tr><tr class="failedeven"><td><a href="#m1">inValidLoginTest</a></td><td rowspan="1">1771238779943</td><td rowspan="1">9351</td></tr><tr class="failedeven"><td><a href="#m2">verifyValidLoginTest</a></td><td rowspan="1">1771238893198</td><td rowspan="1">32103</td></tr><tr><th colspan="4">orangehrm &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="6">com.orangehrm.test.Login</td><td><a href="#m3">getTitle</a></td><td rowspan="2">1771238611138</td><td rowspan="2">32372</td></tr><tr class="retriedeven"><td><a href="#m4">getTitle</a></td></tr><tr class="retriedeven"><td><a href="#m5">inValidLoginTest</a></td><td rowspan="2">1771238761653</td><td rowspan="2">5950</td></tr><tr class="retriedeven"><td><a href="#m6">inValidLoginTest</a></td></tr><tr class="retriedeven"><td><a href="#m7">verifyValidLoginTest</a></td><td rowspan="2">1771238801308</td><td rowspan="2">33502</td></tr><tr class="retriedeven"><td><a href="#m8">verifyValidLoginTest</a></td></tr><tr><th colspan="4">orangehrm &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.orangehrm.test.ApiTest</td><td><a href="#m9">verifyGetUserAPI</a></td><td rowspan="1">1771238599261</td><td rowspan="1">2194</td></tr></tbody>
 </table>
-<h2>orangehrm</h2><h3 id="m0">com.orangehrm.test.Login#inValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin@123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Test Failed: Invalid error message expected [true] but found [false]
-	at com.orangehrm.test.Login.inValidLoginTest(Login.java:68)
+<h2>orangehrm</h2><h3 id="m0">com.orangehrm.test.Login#getTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Admin tab should be visible after successfull login  expected [true] but found [false]
+	at com.orangehrm.test.Login.getTitle(Login.java:41)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
 	at java.base/java.lang.Thread.run(Thread.java:840)
@@ -25,14 +25,48 @@
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
 	at java.base/java.lang.Thread.run(Thread.java:840)
 ... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.orangehrm.test.Login#inValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin@123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Test Failed: Invalid error message expected [true] but found [false]
+<h3 id="m2">com.orangehrm.test.Login#verifyValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Admin tab should be visible after successfull login  expected [true] but found [false]
+	at com.orangehrm.test.Login.verifyValidLoginTest(Login.java:53)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.orangehrm.test.Login#getTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Admin tab should be visible after successfull login  expected [true] but found [false]
+	at com.orangehrm.test.Login.getTitle(Login.java:41)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.orangehrm.test.Login#getTitle</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Admin tab should be visible after successfull login  expected [true] but found [false]
+	at com.orangehrm.test.Login.getTitle(Login.java:41)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.orangehrm.test.Login#inValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin@123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Test Failed: Invalid error message expected [true] but found [false]
 	at com.orangehrm.test.Login.inValidLoginTest(Login.java:68)
 	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
 	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
 	at java.base/java.lang.Thread.run(Thread.java:840)
 ... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.orangehrm.test.ApiTest#verifyGetUserAPI</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.orangehrm.test.Login#getTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.orangehrm.test.Login#verifyValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.orangehrm.test.Login#inValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin@123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Test Failed: Invalid error message expected [true] but found [false]
+	at com.orangehrm.test.Login.inValidLoginTest(Login.java:68)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.orangehrm.test.Login#verifyValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Admin tab should be visible after successfull login  expected [true] but found [false]
+	at com.orangehrm.test.Login.verifyValidLoginTest(Login.java:53)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.orangehrm.test.Login#verifyValidLoginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.AssertionError: Admin tab should be visible after successfull login  expected [true] but found [false]
+	at com.orangehrm.test.Login.verifyValidLoginTest(Login.java:53)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:840)
+... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.orangehrm.test.ApiTest#verifyGetUserAPI</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
